added github url to statistics.ipynb

--- a/statistics.ipynb
+++ b/statistics.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "https://github.com/mica5/statistics/blob/master/statistics.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Stratified Sampling"
    ]
   },
