--- a/statistics.ipynb
+++ b/statistics.ipynb
@@ -11,6 +11,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Introduction\n",
+    "\n",
+    "Any data here, unless otherwise stated, is from the book Probability and Statistics for Engineering and the Sciences, 9th Edition, by Jay Devore (CENGAGE Learning). https://www.amazon.com/Probability-Statistics-Engineering-Sciences-Devore/dp/1305251806 ; the concepts here are also from taking MATH161A at SJSU (San Jose State University in San Jose, California) in Spring 2018.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Stratified Sampling"
    ]
   },
@@ -54,6 +63,61 @@
     "print('proportion of 1s:', c1 / total)\n",
     "print('all added together to make sure it adds to 1:', (c0+c1)/total)\n",
     "print('number of 1s compared to 0s, which should be 2:', c1/c0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Stem and leaf display"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3|1\n",
+      "4|059\n",
+      "5|23788\n",
+      "6|01136777789\n",
+      "7|000023556689\n",
+      "8|0134\n"
+     ]
+    }
+   ],
+   "source": [
+    "# presidential Commission on the Space Shuttle Challenger Accident, Vol. 1, 1986: 129-131\n",
+    "o_ring_temperatures = [84, 49, 61, 40, 83, 67, 45, 66, 70, 69, 80, 58, 68, 60, 67, 72, 73, 70, 57, 63, 70, 78, 52, 67, 53, 67, 75, 61, 70, 81, 76, 79, 75, 76, 58, 31]\n",
+    "\n",
+    "def stem_and_leaf_display(data):\n",
+    "    \"\"\"print a stem-and-leaf display to standard output\n",
+    "\n",
+    "    This is a very primitive algorithm, as it only works for\n",
+    "    two-digit numbers. It is only for demonstrative purposes.\n",
+    "    \"\"\"\n",
+    "    sld = dict()\n",
+    "    for n in data:\n",
+    "        stem = str(n)[0]\n",
+    "        if stem not in sld:\n",
+    "            sld[stem] = list()\n",
+    "        sld[stem].append(str(n)[-1])\n",
+    "    lowkey = min(sld.keys())\n",
+    "    highkey = max(sld.keys())\n",
+    "    for i in range(int(lowkey), int(highkey)+1, 1):\n",
+    "        i = '{}'.format(i)\n",
+    "        if i not in sld:\n",
+    "            sld[i] = list()\n",
+    "    for stem in sorted(sld.keys()):\n",
+    "        print(stem+'|', end='')\n",
+    "        for value in sorted(sld[stem]):\n",
+    "            print(value, end='')\n",
+    "        print()\n",
+    "stem_and_leaf_display(o_ring_temperatures)"
    ]
   }
  ],
