convert notebook to html, which can hopefully be rendered properly on github

--- a/statistics.ipynb
+++ b/statistics.ipynb
@@ -8,6 +8,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook statistics.ipynb to html\n",
+      "[NbConvertApp] Writing 541716 bytes to statistics.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "!jupyter nbconvert --to html statistics.ipynb"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
